--- a/PortalMaster/files/regions/bretonia.html
+++ b/PortalMaster/files/regions/bretonia.html
@@ -23,43 +23,50 @@
 
 
 
+<div id="img_logo">
+ <div class="block-logo" >
+<img class="logo" src="../../media/bretonia.png" height="200" width="200">
+</div>
+</div>
 
 <div class="block-wide">
   <div class="container">
   
   <h2>Bretonia</h2>
-<hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#">link here</a></p>
+<p>The Bretonia was one of the last sleeper ships to arrive in the Sirius Sector, almost twenty years after the Liberty, Kusari, and Rheinland had made planetfall on what became their respective homeworlds. In the chaos of the Exodus, the starboard engine array of the Bretonia was destroyed, requiring her to limp the rest of the way to Sirius.</p>
+<p>By the time the Bretonia arrived, most of the resource rich areas of the sector had already been claimed by the passengers of the Rheinland and the Kusari, while the Liberty had settled the lush planets at the sector core. The passengers of the Bretonia were forced to select a less than ideal site near the Barrier, a giant belt of ice that spans the entire western half of the Sirius Sector. Here they established the colony of New London, on one of the few habitable planets in the area. Isolated by the Barrier from the other houses and years behind, Bretonia began an accelerated program of rebuilding their industrial civilization.</p>
+<p>Historically quiet in terms of crime, Bretonia is the home of two narrowly focused terrorist groups, the Mollys and the Gaians. Common criminals were quite rare until the recent arrival of Corsairs and Outcasts within the colony, which has severely tested the capabilities and resources of the Police Authority and Armed Forces. </p>
+
+
 
 <hr>
 
 <div class="widjet">
-<h3 class="widget-title">Recent Events</h3>
+<h3 class="widget-title">Systems</h3>
   <ul>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">542 AS</span>
-    </li>
-  <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span>
-    </li>
-  <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">New London</a>
 
+    </li>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">Leeds</a>
+
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Cambridge</a>
+
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Manchester</a>
+
+    </li>	
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Dublin</a>
+    </li>
 	
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
-		
-	
+  <a class="recentpost_title" href="#">Edinburgh</a>
+    </li>		
   </ul> 
   
 </div>
@@ -68,52 +75,39 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
   <li>
     <h4>Bretonia Armed Forces</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>The Bretonia Armed Forces has a long history of serving as the first and last line of defense for the great nation Bretonia </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li> 
     <h4>Bretonia Police</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Officers in the Bretonia Police Authority are well-trained, well-armed, and widely considered to be a bastion of incorruptibillity. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Bretonia Security Force</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Bretonia Intelligence Service</h4>
+<p>No one gave me anything to put here...</p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Bretonia Mining and Manufacturing</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Bretonia Mining and Manufacturing (BMM) is one of the largest commercial concerns in Bretonia, a network of semi-autonomous operations that range throughout Bretonian space. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Border World Exports</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Bowex Shipping Company is a pioneer in the exploration of the Border Worlds and the exclusive supplier to the Bretonian Military and Police. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Gateway Shipping</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Gateway Shipping is a Bretonian firm catering to smaller companies that hauls raw materials accross the Border and Independent Worlds. </p><a class="btn" href="#"><span>More info</span></a>
+
   </li>
+  <li>
+    <h4>Planetform</h4>
+<p>Planetform Inc. specializes in the terraforming of non-viable planets in Bretonia and elsewhere. </p>
+ <a class="btn" href="#"><span>More info</span></a>
+ </li>
 
 </ul>
  
@@ -121,34 +115,24 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
   <li>
     <h5>Mollys</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p>The Mollys are a separatist group committed to freeing the Dublin system from Bretonian rule through violent attacks on civilian, commercial & military targets. </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li> 
     <h5>Gaians</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p>The Gaians are a radical eco-terrorist faction opposed to any alteration to the natural environment of a planet specifically those brought about by terraforming. The Gaians fly Civilian Startrackers and Hawks equipped with their own Photon cannons. These slow refiring Photon Cannons range from the Class 3 Avenger to the Class 6 Gaia's Savior Type B and have an easily distinguishable red hue.</p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li>
     <h5>Red Sails</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p> Again I have nothing to put here... </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
-
-
 </ul>
 
  </div>
   </div>
+  &nbsp;
  <div class="table">
 <nav>
   <li><a class="btn" href="#">Discord</a>
