--- a/PortalMaster/files/regions/kusari.html
+++ b/PortalMaster/files/regions/kusari.html
@@ -23,43 +23,54 @@
 
 
 
+<div id="img_logo">
+ <div class="block-logo" >
+<img class="logo" src="../../media/kusari.png" height="200" width="200">
+</div>
+</div>
 
 <div class="block-wide">
   <div class="container">
   
   <h2>Kusari</h2>
-<hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#">link here</a></p>
-
+<p>As the Kusari sleeper ship approached the Sirius Sector, they looked for evidence of high percentages of water, analyzing spectrographic wavelengths of various planet atmospheres. One area in particular looked interesting. Lying near a distinctively shaped blue nebula that the on-board astronomer named the Crow, it was composed of relatively young stars, and possessed at least two planets with high amounts of atmospheric water vapor and oxygen. Planetfall was made on New Tokyo in 5 AS., five years after the arrival of the Liberty. New Tokyo had plenty of water; what it didn’t offer was much land. The ocean planet was dotted with a few small volcanic islands. A culture that had left their cramped homeland far behind had to accept a cruel twist of fate once again, on the other side of the universe. </p>
+<p>Shortly after planetfall, the Planners decided to restore the title of Emperor as the leader of the Kusari government after centuries of figurehead status. Strong and absolute leadership was needed to rebuild their civilization. The political maneuvering was intense. There were two rivals - Masamune Samura and Yosai Hideyoshi. Ultimately, Hideyoshi won. As a compromise, Samura was offered the presidency of the corporation that would rebuild the industrial might of the Kusari people from scratch. He accepted, and Samura Heavy Industries was incorporated, the first of the two great Kusari industrial conglomerates that dominate commerce in the region to this day.</p>
+<p>By 100 AS., Samura had constructed the Yamamoto Shipyard and established its reputation as the premier shipbuilder in Kusari. Over the next several centuries, Samura expanded its gas mining operations throughout Kusari space, began regular trading with the other houses, and perfected the construction of polymer hull panels and shielding. Samura's contracts to construct ships for the Kusari Military remain highly lucrative, while its commercial transports almost entirely dominate that sector. Throughout its history, Samura Heavy Industries has exhibited many of the traits of its founder: methodical, implacable, slow to change, quick to anger. </p>
+<p>The second company had far more humble origins. In 10 AS., a small research company, headed by Katsuhiro Kishiro, genetically modified an existing earth fish species and introduced a super-breed optimized for life in New Tokyo’s alien ocean waters. He also tackled the rice problem. The soil conditions were quite different than Earth, lacking certain nutrients that rice brought on the sleeper ship needed. Again, Kishiro came to the rescue, this time with a new rice strain that could handle the harsh growing conditions found planet side. Kishiro won the adulation of the Kusari imperial family, and thus began the second of the two industrial dynasties of Kusari. Adopting the name Kishiro Technologies for his company, Kishiro espoused a progressive research oriented environment that relied more on brains than sheer size and intimidation, unlike his primary rival, Samura. </p>
+<p>In 91 AS., Kishiro Technologies achieved a breakthrough in the development of quantum circuitry that revolutionized the entire economy almost overnight. Just as its founder had originally planned, Kishiro products found their way into almost every consumer, commercial, or military product on the market -- including those made by Samura. With their new found capital, Kishiro Technologies rapidly expanded their manufacturing capabilities and established the Yukawa Shipyard within the nearby Honshu system, devoted almost exclusively to the construction of ships to be used in gas mining operations in the nearby Crow Nebula. </p>
+<p>Kusari was generally poor in natural resources, although the New Tokyo system did contain limited deposits of aluminum and titanium, which enabled Kusari shipbuilders to be relatively self-sufficient, at least for the first three centuries after arrival. The surrounding Crow Nebula had little in the way of asteroid fields found in such abundance in the Walker and Barrier regions. It did offer one key resource, however, that the entire Sirius Sector needed. Virtually unlimited supplies of Helium-3 and Deuterium were present inside the great clouds of ionized gases in the nearby Sigma systems. Both isotopes were quite rare on planets, but essential for the fusion engines that powered spacecraft of all sizes. Kusari soon became the exclusive supplier of H-Fuel, as they called it, to all of the colonies. H-fuel was the foreign currency source that allowed Kusari companies to purchase the many raw materials found in the other colonies that Kusari lacked. </p>
 <hr>
 
 <div class="widjet">
-<h3 class="widget-title">Recent Events</h3>
+<h3 class="widget-title">Systems</h3>
   <ul>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">542 AS</span>
-    </li>
-  <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span>
-    </li>
-  <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">New Tokyo</a>
 
+    </li>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">Honshu</a>
+
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Hokkaido</a>
+
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Shikoku</a>
+
+    </li>	
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Kyshu</a>
+    </li>
 	
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
-		
+  <a class="recentpost_title" href="#">Chugoku</a>
+    </li>	
 	
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Tohoku</a>
+    </li>	
   </ul> 
   
 </div>
@@ -67,95 +78,66 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <ul class="columnsr columnsr-4 services"> 
 
   <li>
-    <h4>Kusari Navy</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Kusari Naval Forces</h4>
+<p>The Kusari Naval Forces is highly organised and possesses all of the considerable technological advantages inferred by Kusari industry. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li> 
     <h4>Kusari Police</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>The Kusari State Police is a disciplined force of career personnel assigned to guard the borders of Kusari space and protect Kusari commercial interests. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Kusari Intelligence</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>No one gave me anything to put here...</p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Samura Heavy Industries</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Samura Industries is one of the great Kusari keiretsu -- sprawling, vertically integrated companies that control whole industries. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
     <h4>Kishiro Technologies</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+<p>Kishiro Technologies is one of the great Kusari keiretsu -- sprawling, vertically intergtrated companies that control whole industries. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Gas Miner Guild</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Gas Miners Guild</h4>
+<p>The Gas Miners Guild (GMG) is a tight-knit professional organization that acts as the primary suppler of H-Fuel to the four major houses. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
+
 </ul>
  
 <ul class="columnsr columnsr-4 servicesr"> 
 
   <li>
     <h5>Blood Dragons</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p>The Blood Dragons are a terrorist organization supposedly descended from the royal guard of Shogun Hideyoshi -- deposed during a coup several centuries before -- and are dedicated to the overthrow of the current Kusari government. </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li> 
     <h5>Golden Chrysanthemums</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
-  </li>
-  <li>
-    <h5>Farmers Alliance</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p>The Golden Chrysanthemums are a terrorist organization seeking to overthrow the current Kusari government and institute a matriarchy. </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li>
     <h5>Hogosha</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+<p>The Hogosha are a quasi-legal criminal organisation that ostensibly exists to promote the "welfare and prosperity of the Kusari people". </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
-
+  <li>
+    <h5>Farmers Alliance</h5>
+<p>The Farmers Alliance is a Kusari political organisation formed to lobby for government subsidies and restrictions on the sale of foreign foods. They are firm enemies of Synth Foods. </p>
+<a class="btn2" href="#"><span>More info</span></a>
+  </li>
 
 </ul>
 
  </div>
   </div>
+  &nbsp;
  <div class="table">
 <nav>
   <li><a class="btn" href="#">Discord</a>
