--- a/PortalMaster/files/regions/rheinland.html
+++ b/PortalMaster/files/regions/rheinland.html
@@ -16,48 +16,52 @@
   <li><a class="btnr" href="#">Updates</a>
   <li><a class="btn" href="../../lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
-  <li><a class="btn" href="../../about.html">About</a>  
+  <li><a class="btn" href="../../about.html">About</a>   
 
 </nav>
 </div>
 
 
 
+<div id="img_logo">
+ <div class="block-logo" >
+<img class="logo" src="../../media/rheinland.png" height="200" width="200">
+</div>
+</div>
 
 <div class="block-wide">
   <div class="container">
   
   <h2>Rheinland</h2>
-<hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#">link here</a></p>
-
+<p>Two years before its arrival in the Sirius Sector, the captain of the German sleeper ship Rheinland was awakened from hypersleep to begin preparations for planetfall. He and his officers spent weeks studying the long-range sensor logs in an effort to determine the best location for their new home. Much to their surprise, the Rheinlander officers found that the Liberty already had arrived in the sector and had made planetfall within a clutch of worlds near the center. The officers decided to give the Liberty colonists their space, as it were, and instead concentrated on an area close to the Walker Nebula and rich in natural resources.</p>
+<p>Rheinland was, at one point, the most powerful of the major houses, even with its stripped down military, which has been reduced to its last battleship, the Westfalen. An industrial and nationalistic people, the Germans brought their traits with them to the Rheinland and produced an economic powerhouse that has seen better days. Rheinland was blessed with food and more resources than it knew what to do with, save for H-Fuel the critical fuel for space flight. Rheinland launched an all-out war against the GMG to seize the gas fields of the Sigma systems, but was pushed back and utterly crushed in a daring GMG ambush. The remnants of the Imperial Fleet still exist today, slowly being reclaimed by shamed ALG Rheinlanders and indifferent Junkers. </p>
+<p>The debts from the Great War paralyzed the economy and the once powerful nation slid into a tailspin. Chancellors were elected, tax reforms were launched, economic incentives were initiated, but nothing save for selling off Rheinland's precious resources to Liberty's corporations could keep the nation afloat. Many criminal factions flourished in this upheaval: the Bundschuh strive to purge corruption from the Rheinland government, while the LWB seek to eject Synth Foods from Rheinland space in general and Stuttgart in particular. Further down the spectrum of altruism come the Unioners, largely made up of former Alster Shipyards workers and their descendants, who have turned to piracy since the days of the rebellion. Finally come the Red Hessians, opportunistic pirates feared throughout Sirius. The government struggles to keep in check with its dwindling navy, recently rendered impotent by colonial conflict. </p>
+<p>Those who have not left Rheinland for the forces of the radicals have simply left outright, fleeing to the economic prosperity of Liberty to make their mark. However, Rheinland's tourism industry has seen a recent resurgence despite the events of the Nomad Incident.</p> 
+<p>Although Rheinland went through a period of radical military buildup under Nomad influence, the nation has recovered to its ante-bellum levels, which weren't all that stellar to begin with. However, the economy seems to have tapered out, waiting until the government can strike the right balance to revive the nation into the powerhouse it once was and could realistically become again. </p>
 <hr>
 
 <div class="widjet">
-<h3 class="widget-title">Recent Events</h3>
+<h3 class="widget-title">Systems</h3>
   <ul>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">542 AS</span>
+  <a class="recentpost_title" href="#">New Berlin</a>
+
     </li>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span>
+  <a class="recentpost_title" href="#">Hamburg</a>
+
     </li>
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">Frankfurt</a>
+
 
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">Stuttgard</a>
+
 	
   <li class="postclass clearfix">
-  <a class="recentpost_title" href="#">Post description with link</a>
-  <span class="recentpost_date">544 AS</span></li>
+  <a class="recentpost_title" href="#">Dresden</a>
+
 		
 	
   </ul> 
@@ -67,68 +71,33 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <ul class="columnsr columnsr-4 services"> 
 
   <li>
-    <h4>Liberty Navy</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Rheinland Military</h4>
+<p>Rheinland Military continues a proud tradition of military service that stretches back several centuries. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li> 
-    <h4>Liberty Police Incorporated</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Rheinland Police</h4>
+<p>Rheinland Federal Police is an impressively well-equipped organization acting as the primary security force in Rheinland space</p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Liberty Security Force</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Daumann Heavy Construction</h4>
+<p>Daumann Heavy Construction is the largest mining and manufacturing firm in Rheinland. </p>a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Ageira Technologies</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Kruger Minerals</h4>
+<p>Kruger Mining and Minerals works in partnership with ALG Waste Disposal to mine the valuable resources within Rheinland and its neighboring territories. /p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Interspace Commerce</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>Republican Shipping</h4>
+<p>Republican Shipping manages a substantial majority of all cargo transported within the borders of Rheinland. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Cryer Pharmaceuticals</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
-  </li>
-  <li>
-    <h4>Synth Foods</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
-  </li>
-  <li>
-    <h4>Orbital Spa & Cruise</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="#"><span>More info</span></a>
+    <h4>ALG Waste Disposal</h4>
+<p>ALG Waste Disposal is based in Rheinland but operates throughout the colonies due to its outstanding reputation for industrial clean-up. </p>
+<a class="btn" href="#"><span>More info</span></a>
   </li>
 
 </ul>
@@ -136,35 +105,32 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <ul class="columnsr columnsr-4 servicesr"> 
 
   <li>
-    <h5>Lane Hackers</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+    <h5>Red Hessian</h5>
+<p>The story of the Hessians emerges from the turbulent history of the Dresden system, the mining heartland of Rheinland since the beginning of the third century. Mining there was dirty, dangerous work, but Daumann and Kruger had little reason to lose sleep over the welfare of their employees. The price of the occasional disability pension or life insurance policy was nothing compared to the money made from extracting and refining the metals and materials that fed Rheinland industry. </p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li> 
-    <h5>Rogues</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+    <h5>Unioners</h5>
+<p>The Unioners are a terrorist group composed of dispossessed Rheinland shipyard workers who engage in brutal reprisals chiefly against Republican Shipping. </p>
+
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h5>Xenos</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn2" href="#"><span>More info</span></a>
+    <h5>LWB</h5>
+<p>Stuttgart has been the breadbasket of Rheinland since 100 years after settlement. Over time, its farmers formed a powerful union, named the WVS. The organization successfully lobbied the Rheinland government to subsidize Stuttgart agriculture for hundreds of years. With the end of the 80-Years War in 680 AS, however, the subsidies were no longer tenable.</p>
+<a class="btn2" href="#"><span>More info</span></a>
   </li>
-
+  <li>
+    <h5>Bundschuh</h5>
+<p>Believed to be founded by a group of New Berlin University students in 679 AS, the movement had much support among the liberal elite of New Berlin, tired of the corrupt practices of the government that had led them to financial ruin near the end of the 80-Years War. During the Dresden rebellion of 700 AS, the Bundschuh found their first official cause -- shipping supplies "liberated" from Frankfurt to the Kruger and Daumann rebels. Three months after that, sympathetic maintenance workers started sabotaging Daumann manufacturing operations in New Berlin. The industrial heart of Rheinland stopped beating, and the Popular Revolution had begun. </p>
+<a class="btn2" href="#"><span>More info</span></a>
+  </li>
 
 </ul>
 
  </div>
   </div>
+  &nbsp;
  <div class="table">
 <nav>
   <li><a class="btn" href="#">Discord</a>
