--- a/PortalMaster/regions.html
+++ b/PortalMaster/regions.html
@@ -38,51 +38,33 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <ul class="columns columns-4 services">
   <li>
     <h4>Liberty</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/liberty.html"><span>More info</span></a>
+<p>When the American sleeper ship Liberty first arrived in the Sirius Sector they found an area rich in resources but lacking in habitable planets. With a hundred systems at their fingertips, they settled on those near the center of Sirius where the highest number of main sequence stars and Earth-like planets existed and a fair number of resources could be easily obtained.</p>
+<a class="btn" href="files/regions/liberty.html"><span>More info</span></a>
   </li>
   <li> 
     <h4>Rheinland</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/rheinland.html"><span>More info</span></a>
+<p>Two years before its arrival in the Sirius Sector, the captain of the German sleeper ship Rheinland was awakened from hypersleep to begin preparations for planetfall. He and his officers spent weeks studying the long-range sensor logs in an effort to determine the best location for their new home</p>
+<a class="btn" href="files/regions/rheinland.html"><span>More info</span></a>
   </li>
   <li>
     <h4>Kusari</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/kusari.html"><span>More info</span></a>
+<p>The Kusari systems were founded by the inhabitants of the Japanese sleeper ship Kusari. This house is ruled by a feudal system, in contrast to the single leaders of the other nations, lead by the Shogun, currently Shogun Edo. The capital of Kusari space is Planet New Tokyo. </p>
+<a class="btn" href="files/regions/kusari.html"><span>More info</span></a>
   </li>
   <li>
     <h4>Bretonia</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/bretonia.html"><span>More info</span></a>
+<p>The Bretonia was one of the last sleeper ships to arrive in the Sirius Sector, almost twenty years after the Liberty, Kusari, and Rheinland had made planetfall on what became their respective homeworlds. In the chaos of the Exodus, the starboard engine array of the Bretonia was destroyed, requiring her to limp the rest of the way to Sirius. </p>
+ <a class="btn" href="files/regions/bretonia.html"><span>More info</span></a>
   </li>
   <li>
     <h4>Outcasts</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/outcast.html"><span>More info</span></a>
+<p>The crippled sleeper ship Hispania arrived in Omicron Alpha almost 800 years ago. Its passengers named the planet Malta -- a harsh place of acidic oceans, gray skies, and vast plains covered in a species of tall, thin, orange grass. They later learned that the grass could be rendered into a narcotic substance, that they called Cardamine. </p>
+<a class="btn" href="files/regions/outcast.html"><span>More info</span></a>
   </li>
   <li>
     <h4>Corsairs</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/corsair.html"><span>More info</span></a>
+ <p>Scratching out a living, the Corsairs managed a bleak existence for four centuries. Eventually they developed a strong self-identity, isolated from the rest of the Houses. In 450 AS, that insular world changed. An exploratory expedition headed by Franz Schulman -- financed by Daumann and the Rheinland government -- stumbled into the system while mapping the far reaches of the Walker Nebula. The local inhabitants, sensing a historic opportunity, attacked the landing party en masse, killing all save Schulman, whom they took hostage to gain control of the mother ship Schiller in orbit above the planet. </p>
+ <a class="btn" href="files/regions/corsair.html"><span>More info</span></a>
   </li>
   <li>
     <h4>Core Worlds</h4>
